--- a/resmanage-api/package.json
+++ b/resmanage-api/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "express-jwt": "6.1.1",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19"
