--- a/resmanage-uniapp/tsconfig.json
+++ b/resmanage-uniapp/tsconfig.json
@@ -2,9 +2,9 @@
   "extends": "@vue/tsconfig/tsconfig.json",
   "compilerOptions": {
     "sourceMap": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     },
     "lib": ["esnext", "dom"],
     "types": ["@dcloudio/types"]
