--- a/resmanage-uniapp/package.json
+++ b/resmanage-uniapp/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "resmanage-uniapp",
-  "version": "1.0.0",
+  "name": "uni-preset-vue",
+  "version": "0.0.0",
   "scripts": {
     "dev:app": "uni -p app",
     "dev:app-android": "uni -p app-android",
@@ -49,8 +49,10 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3061620221230002",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3061620221230002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3061620221230002",
+    "@types/node": "^18.11.18",
     "vue": "^3.2.45",
-    "vue-i18n": "^9.1.9"
+    "vue-i18n": "^9.1.9",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.2.7",
