--- a/resmanage-uniapp/package.json
+++ b/resmanage-uniapp/package.json
@@ -49,6 +49,7 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3061620221230002",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3061620221230002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3061620221230002",
+    "@dcloudio/uni-ui": "^1.4.24",
     "@types/node": "^18.11.18",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9",
@@ -61,6 +62,8 @@
     "@dcloudio/uni-stacktracey": "3.0.0-alpha-3061620221230002",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3061620221230002",
     "@vue/tsconfig": "^0.1.3",
+    "sass": "^1.57.1",
+    "sass-loader": "10.1.1",
     "typescript": "^4.9.4",
     "vite": "4.0.4",
     "vue-tsc": "^1.0.24"
