--- a/resmanage-api/package.json
+++ b/resmanage-api/package.json
@@ -6,12 +6,14 @@
   "type": "module",
   "author": "jidonghao <ji534@outlook.com>",
   "scripts": {
-    "start": "nodemon ./index.js"
+    "start": "nodemon ./index.js",
+    "getDoc": "apiDoc -i ./ -o apiDoc/"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-jwt": "6.1.1",
+    "express-static": "^1.2.6",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
