--- a/resmanage-api/package.json
+++ b/resmanage-api/package.json
@@ -7,9 +7,11 @@
   "author": "jidonghao <ji534@outlook.com>",
   "scripts": {
     "start": "nodemon ./index.js",
-    "getDoc": "apiDoc -i ./routes/ -o apiDoc/"
+    "getDoc": "apiDoc -i ./routes/ -o apiDoc/",
+    "pkg": "pkg index.js"
   },
   "dependencies": {
+    "@alicloud/pop-core": "^1.7.12",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-jwt": "6.1.1",
@@ -17,6 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "redis": "^4.6.4"
   }
 }
