--- a/resmanage-api/package.json
+++ b/resmanage-api/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.7.12",
+    "ali-oss": "^6.17.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-jwt": "6.1.1",
