--- a/resmanage-uniapp/package.json
+++ b/resmanage-uniapp/package.json
@@ -51,6 +51,7 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3070020230117001",
     "@dcloudio/uni-ui": "^1.4.24",
     "@types/node": "^18.11.18",
+    "mitt": "^3.0.0",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.1.0"
