--- a/resmanage-api/package.json
+++ b/resmanage-api/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
-    "redis": "^4.6.4"
+    "redis": "^4.6.4",
+    "winston": "^3.9.0"
   }
 }
